--- a/app/src/main/res/layout/activity_forecast.xml
+++ b/app/src/main/res/layout/activity_forecast.xml
@@ -7,6 +7,7 @@
     tools:context=".ui.ForecastActivity">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_view_forecast"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="16dp"
