--- a/app/src/main/res/layout/row_item.xml
+++ b/app/src/main/res/layout/row_item.xml
@@ -57,13 +57,12 @@
                 android:id="@+id/imgIcon"
                 android:layout_width="32dp"
                 android:layout_height="32dp"
-                android:layout_marginTop="8dp"
-                card_view:layout_constraintBottom_toBottomOf="@+id/text_view_temperature"
+                card_view:layout_constraintBottom_toBottomOf="parent"
                 card_view:layout_constraintEnd_toEndOf="parent"
-                card_view:layout_constraintHorizontal_bias="0.87"
+                card_view:layout_constraintHorizontal_bias="0.933"
                 card_view:layout_constraintStart_toStartOf="parent"
                 card_view:layout_constraintTop_toTopOf="parent"
-                card_view:layout_constraintVertical_bias="0.2"
+                card_view:layout_constraintVertical_bias="0.571"
                 card_view:srcCompat="@drawable/ic_weather"
                 card_view:tint="@color/yellow"
                 tools:ignore="ContentDescription" />
