--- a/app/src/main/res/menu/menu_update.xml
+++ b/app/src/main/res/menu/menu_update.xml
@@ -5,11 +5,11 @@
     <item
         android:title="@string/atualizar"
         android:id="@+id/action_update"/>
-    <!--item
+    <item
 
         android:id="@+id/action_search"
         android:icon="@drawable/ic_search_black_24dp"
         android:title="@string/pesquisar"
         app:actionViewClass="android.widget.SearchView"
-        app:showAsAction="always"/-->
+        app:showAsAction="always"/>
 </menu>
