--- a/app/src/main/res/menu/menu_update.xml
+++ b/app/src/main/res/menu/menu_update.xml
@@ -9,7 +9,7 @@
 
         android:id="@+id/action_search"
         android:icon="@drawable/ic_search_black_24dp"
-        android:title="@string/pesquisar"
+        android:title="@string/search"
         app:actionViewClass="android.widget.SearchView"
         app:showAsAction="always"/>
 </menu>
