--- a/app/src/main/res/menu/menu_update.xml
+++ b/app/src/main/res/menu/menu_update.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:title="@string/atualizar"
+        android:title="@string/update"
         android:id="@+id/action_update"/>
     <item
 
