row item forecast divider

--- a/app/src/main/res/layout/row_item_forecast.xml
+++ b/app/src/main/res/layout/row_item_forecast.xml
@@ -31,4 +31,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/text_view_date"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <View
+        android:background="@color/divider"
+        android:id="@+id/view"
+        android:layout_width="0dp"
+        android:layout_height="1dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/text_view_forecast_temperature" />
 </androidx.constraintlayout.widget.ConstraintLayout>
